# nonebot-plugin-shiro-signin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_shiro_signin/: __init__.py  config.py  utils.py
nonebot_plugin_shiro_signin/templates/: shop_card.html  sign_card.html
